# blue-water-octopus

./: .gitignore  Dockerfile
.devcontainer/: devcontainer.json
blue-water-octopus-code/: .clang-format  .clang-tidy  CMakeLists.txt
blue-water-octopus-code/app/: CMakeLists.txt
blue-water-octopus-code/app/Capra/: app-Capra.cpp
blue-water-octopus-code/app/Codility/: app-Codility.cpp
blue-water-octopus-code/app/LinkedInBillWeinman/advanced_concepts/: app-advanced_concepts.cpp
blue-water-octopus-code/app/Magazino/: app-Magazino.cpp
blue-water-octopus-code/app/ParallelProgramming/: app-parallel_programing.cpp
blue-water-octopus-code/include/Capra/: Capra.hpp
blue-water-octopus-code/include/Codility/arrays/: cyclic_rotation.hpp  odd_occurrencesIn_array.hpp
blue-water-octopus-code/include/Codility/counting_elements/: frog_river_one.hpp  max_counters.hpp  missing_integer.hpp  perm_check.hpp
blue-water-octopus-code/include/Codility/iteractions/: binary_gap.hpp
blue-water-octopus-code/include/Codility/time_complexity/: tape_equilibrium.hpp
blue-water-octopus-code/include/LinkedInBillWeinman/advanced_concepts/: advanced_concepts.hpp  common.hpp  concurrency.hpp  constraints.hpp  initialization_spaceship_chrono_span_filesystem.hpp  iterator.hpp  move_semantics.hpp  optional_vvariants_bidings.hpp  rationale.hpp
blue-water-octopus-code/include/Magazino/: Magazino.hpp
blue-water-octopus-code/include/ParallelProgramming/: parallel_programing.hpp
blue-water-octopus-code/src/: CMakeLists.txt
blue-water-octopus-code/src/Capra/: Capra.cpp
blue-water-octopus-code/src/Codility/arrays/: cyclic_rotation.cpp
blue-water-octopus-code/src/Codility/counting_elements/: frog_river_one.cpp  perm_check.cpp
blue-water-octopus-code/src/Codility/iteractions/: binary_gap.cpp
blue-water-octopus-code/src/Codility/time_complexity/: tape_equilibrium.cpp
blue-water-octopus-code/src/LinkedInBillWeinman/advanced_concepts/: advanced_concepts.cpp  concurrency.cpp  constraints.cpp  initialization_spaceship_chrono_span_filesystem.cpp  iterator.cpp  move_semantics.cpp  optional_vvariants_bidings.cpp  rationale.cpp
blue-water-octopus-code/src/Magazino/: Magazino.cpp
blue-water-octopus-code/src/ParallelProgramming/: parallel_programing.cpp
blue-water-octopus-code/test/: CMakeLists.txt
blue-water-octopus-code/test/Capra/: test-Capra.cpp
blue-water-octopus-code/test/Codility/arrays/: cyclic_rotation.cpp  odd_occurencesin_array.cpp
blue-water-octopus-code/test/Codility/counting_elements/: frog_river_one.cpp  max_counters.cpp  perm_check.cpp
blue-water-octopus-code/test/Codility/iteractions/: binary_gap.cpp
blue-water-octopus-code/test/Codility/time_complexity/: frog_imp.cpp  perm_missing_elem.cpp  tape_equilibrium.cpp
blue-water-octopus-code/test/Magazino/: test-Magazino.cpp
